Finished CSS for header, Added organized comments

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 
     <body>
 
+        <!-- Header Starts -->
         <header>
             <h1>Dakota Donaldson</h1>
+            <!-- Navigation Starts -->
             <nav>
                 <ul>
                     <li>
@@ -28,23 +30,42 @@
             </nav>
         </header>
 
-        <section>
-            <article id="#About-Me">
-                <h2 >About Me</h2>
+        <!-- Hero Starts -->
+        <section class="hero">
+            <content>
+                <img src="../Dakota-Donaldson-Portfolio/assets/images/IMG_1889 (4).jpg" alt="/" />
+            </content>
+        </section>
+        <!-- Content Starts -->
+        <section class="info">
+            <article class="flex-container" id="About-Me">
+                <content class="flex-left">
+                    <h2 >About Me</h2>
+                </content>
+                <content class="flex-right">
+                    <p>
+                        Exercitation enim cillum aliqua deserunt minim. Ullamco cillum ea dolor aliqua commodo consectetur amet commodo consequat sit incididunt do et elit. Id exercitation reprehenderit sit sint laboris ex labore. Consequat enim nisi amet dolor ipsum labore nostrud laboris est minim qui. Irure velit dolore culpa occaecat pariatur enim incididunt duis est consectetur qui. 
+                    </p>
+                </content>
+            </article> 
+            <article class="flex-container" id="Work">
                 <content>
-                    Exercitation enim cillum aliqua deserunt minim. Ullamco cillum ea dolor aliqua commodo consectetur amet commodo consequat sit incididunt do et elit. Id exercitation reprehenderit sit sint laboris ex labore. Consequat enim nisi amet dolor ipsum labore nostrud laboris est minim qui. Irure velit dolore culpa occaecat pariatur enim incididunt duis est consectetur qui.
+                    <h2>Work</h2>
+                </content>
+                <content>
+                    <p>
+                        Aute irure deserunt consectetur cillum aliqua minim eiusmod. Tempor culpa proident deserunt deserunt culpa quis sunt voluptate exercitation eiusmod aliqua amet. Tempor cillum nostrud duis excepteur non mollit aliqua cillum eiusmod.
+                    </p>
                 </content>
             </article>
-            <article id="#Work">
-                <h2>Work</h2>
+            <article class="flex-container" id="Contact-Me">
                 <content>
-                    Aute irure deserunt consectetur cillum aliqua minim eiusmod. Tempor culpa proident deserunt deserunt culpa quis sunt voluptate exercitation eiusmod aliqua amet. Tempor cillum nostrud duis excepteur non mollit aliqua cillum eiusmod.
+                    <h2>Contact Me</h2>
                 </content>
-            </article>
-            <article id="#Contact-Me">
-                <h2>Contact Me</h2>
                 <content>
-                    Esse in in amet do. Lorem pariatur commodo mollit non elit proident labore. Dolor adipisicing cupidatat ut duis. Voluptate est minim sint tempor exercitation amet adipisicing proident officia.
+                    <p>
+                        Esse in in amet do. Lorem pariatur commodo mollit non elit proident labore. Dolor adipisicing cupidatat ut duis. Voluptate est minim sint tempor exercitation amet adipisicing proident officia.
+                    </p>
                 </content>
             </article>
         </section>
