Added profile pic, condensed css/html files

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </section>
         <!-- Content Starts -->
         <section class="info">
-            <article class="flex-container" id="About-Me">
+            <article id="About-Me">
                 <content class="flex-left">
                     <h2 >About Me</h2>
                 </content>
@@ -48,7 +48,7 @@
                     </p>
                 </content>
             </article> 
-            <article class="flex-container" id="Work">
+            <article class= id="Work">
                 <content>
                     <h2>Work</h2>
                 </content>
@@ -58,7 +58,7 @@
                     </p>
                 </content>
             </article>
-            <article class="flex-container" id="Contact-Me">
+            <article id="Contact-Me">
                 <content>
                     <h2>Contact Me</h2>
                 </content>
