--- a/index.html
+++ b/index.html
@@ -39,23 +39,34 @@
         <!-- Content Starts -->
         <section class="info">
             <article id="About-Me">
-                <content class="flex-left">
+                <content>
                     <h2 >About Me</h2>
                 </content>
-                <content class="flex-right">
+                <content>
                     <p>
-                        Exercitation enim cillum aliqua deserunt minim. Ullamco cillum ea dolor aliqua commodo consectetur amet commodo consequat sit incididunt do et elit. Id exercitation reprehenderit sit sint laboris ex labore. Consequat enim nisi amet dolor ipsum labore nostrud laboris est minim qui. Irure velit dolore culpa occaecat pariatur enim incididunt duis est consectetur qui. 
+                        Exercitation enim cillum aliqua deserunt minim. Ullamco cillum ea dolor aliqua commodo consectetur amet commodo consequat sit incididunt do et elit. Id exercitation reprehenderit sit sint laboris ex labore. Consequat enim nisi amet dolor ipsum labore nostrud laboris est minim qui. Irure velit dolore culpa occaecat pariatur enim incididunt duis est consectetur qui. <br></br>
+                        In eu do ullamco laborum Lorem ipsum aute dolor tempor est eu. Esse reprehenderit mollit reprehenderit eu cupidatat enim amet quis nisi incididunt culpa amet voluptate. Laboris laboris eu est est et exercitation. Magna velit sint dolor cillum eu velit est. Elit aliqua nulla est minim quis cupidatat ipsum dolor ullamco ut mollit. Mollit enim nisi consectetur nostrud ea consequat sint.
                     </p>
                 </content>
             </article> 
-            <article class= id="Work">
+            <article id="Work">
                 <content>
                     <h2>Work</h2>
                 </content>
                 <content>
-                    <p>
-                        Aute irure deserunt consectetur cillum aliqua minim eiusmod. Tempor culpa proident deserunt deserunt culpa quis sunt voluptate exercitation eiusmod aliqua amet. Tempor cillum nostrud duis excepteur non mollit aliqua cillum eiusmod.
-                    </p>
+                    <a href="https://dakota3214.github.io/Run-Buddy/" alt="/" target="_blank">
+                        <div class="main-image">
+                            </a> 
+                            <h3>Run Buddy</h3>
+                            <h4>HTML/CSS</h4>
+                        </div>
+                    </a>
+                    <a href="https://dakota3214.github.io/Horiseon-remodel/" alt="/" target="_blank">
+                        <div>
+
+
+                        </div>
+                    </a>
                 </content>
             </article>
             <article id="Contact-Me">
