Trying to fix work section

--- a/index.html
+++ b/index.html
@@ -50,20 +50,40 @@
                 </content>
             </article> 
             <article id="Work">
-                <content>
-                    <h2>Work</h2>
-                </content>
-                <content>
+                <section>
+                    <span>
+                        <h2>Work</h2>
+                    </span>
                     <a href="https://dakota3214.github.io/Run-Buddy/" alt="/" target="_blank">
-                        <div class="main-image">
-                            </a> 
-                            <h3>Run Buddy</h3>
-                            <h4>HTML/CSS</h4>
-                        </div>
+                        <content class="main-anchor">
+                            
+                                <div class="main-image">
+                                    
+                                    <h3>Run Buddy</h3>
+                                    <h4>HTML/CSS</h4>
+                                </div>
+                            </a>
+                        </content>
                     </a>
-                    <a href="https://dakota3214.github.io/Horiseon-remodel/" alt="/" target="_blank">
+                </section>
+                <content class="secondary-images">
+                    <a class="horiseon-image" href="https://dakota3214.github.io/Horiseon-remodel/" alt="/" target="_blank">
                         <div>
 
+                        </div>
+                    </a>
+                    <a class="youtube-image" href="">
+                        <div>
+
+                        </div>
+                    </a>
+                    <a>
+
+
+
+                    </a>
+                    <a>
+                        <div>
 
                         </div>
                     </a>
