Fixed images and finished styling css to images, added links

--- a/index.html
+++ b/index.html
@@ -50,21 +50,45 @@
                 </content>
             </article> 
             <article id="Work">
-                <section>
                     <content>
                         <h2>Work</h2>
                     </content>
-                    <a href="https://www.youtube.com/" target="_blank">
-                    <content class="main-anchor">
-                            <div class="main-image">
-                                
+                    <section>
+                        <a id="run-buddy" class="work-images"  href="https://dakota3214.github.io/Run-Buddy/" target="_blank" alt="Run-buddy marketing Logo">
+                            <div class="textbox">
+                        
                                 <h3>Run Buddy</h3>
                                 <h4>HTML/CSS</h4>
                             </div>
-                    </content>
-                    </a>
-                </section>
-                <content class="secondary-images">
+                        </a>
+                        <div class="secondary-images">
+                            <a id="horiseon-img-id" class="work-images" href="https://dakota3214.github.io/Horiseon-remodel/" alt="Horiseon business Logo" target="_blank">
+                            <div class="textbox">
+                                <h3>Horiseon</h3>
+                                <h4>CSS</h4>
+                            </div>
+                            </a>
+                            <a id="youtube-id" class="work-images" href="https://www.youtube.com/" target="_blank" alt="Youtube logo">
+                            <div class="textbox"> 
+                                <h3>Youtube</h3>
+                            </div>
+                            </a>
+                        </div>
+                        <div class="secondary-images">
+                            <a id="google-id" class="work-images" href="https://www.google.com/" target="_blank" alt="Google Logo">
+                                <div class="textbox">
+                                    <h3>Google</h3>
+                                </div>
+                            </a>
+                            <a id="amazon-id" class="work-images" href="https://www.amazon.com/" target="_blank" alt="Amazon Logo">
+                                <div class="textbox">
+                                    <h3>Amazon</h3>
+                                </div>
+                            </a>
+
+                        </div>
+                    </section>
+                <!-- <content class="secondary-images">
                     <a class="horiseon-image" href="https://dakota3214.github.io/Horiseon-remodel/" alt="/" target="_blank">
                         <div>
 
@@ -85,7 +109,7 @@
 
                         </div>
                     </a>
-                </content>
+                </content> -->
             </article>
             <article id="Contact-Me">
                 <content>
