Added Contact Me info

--- a/index.html
+++ b/index.html
@@ -85,40 +85,25 @@
                                     <h3>Amazon</h3>
                                 </div>
                             </a>
-
                         </div>
                     </section>
-                <!-- <content class="secondary-images">
-                    <a class="horiseon-image" href="https://dakota3214.github.io/Horiseon-remodel/" alt="/" target="_blank">
-                        <div>
-
-                        </div>
-                    </a>
-                    <a class="youtube-image" href="">
-                        <div>
-
-                        </div>
-                    </a>
-                    <a>
-
-
-
-                    </a>
-                    <a>
-                        <div>
-
-                        </div>
-                    </a>
-                </content> -->
             </article>
             <article id="Contact-Me">
                 <content>
                     <h2>Contact Me</h2>
                 </content>
                 <content>
-                    <p>
-                        Esse in in amet do. Lorem pariatur commodo mollit non elit proident labore. Dolor adipisicing cupidatat ut duis. Voluptate est minim sint tempor exercitation amet adipisicing proident officia.
-                    </p>
+                    <ul>
+                        <li>
+                            <a href="https://www.bing.com/images/search?view=detailV2&ccid=kjvbdu9l&id=51DA958F6CB62AD00EC1E599B347EFDD99C85C67&thid=OIP.kjvbdu9lbCtBvWwH_YkleQHaE8&mediaurl=https%3a%2f%2fget.pxhere.com%2fphoto%2flaptop-computer-smartphone-mobile-screen-people-technology-car-web-internet-touch-tablet-vehicle-phone-office-telephone-communication-gadget-blue-business-black-mobile-phone-modern-device-smart-phone-electronics-design-display-cellphone-digital-media-network-multimedia-wireless-smart-using-computer-technology-person-on-phone-mobile-phones-on-the-phone-business-phone-mobile-device-automobile-make-portable-communications-device-office-phone-861251.jpg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.923bdb76ef656c2b41bd6c07fd892579%3frik%3dZ1zImd3vR7OZ5Q%26pid%3dImgRaw%26r%3d0&exph=3072&expw=4608&q=mobile+phone&simid=608043390712769076&FORM=IRPRST&ck=EA43A7ABF6032D72D97BE8475C6B57BA&selectedIndex=4&ajaxhist=0&ajaxserp=0">903.724.3255</a>           
+                        </li>
+                        <li>
+                            <a href="mailto:dakota.donaldson17@icloud.com">Email</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/Dakota3214">GitHub</a>
+                        </li>
+                    </ul>
                 </content>
             </article>
         </section>
