Fixing media query

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
+        <meta content="width=device-width, initial-scale=1.0" charset="UTF-8" />
         <link rel="stylesheet" href="../Dakota-Donaldson-Portfolio/assets/css/style.css" />
         <title>Dakota Donaldson's Portfolio</title>
     </head>
