added Eazy Eatz project to portfolio, relinked assets

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta content="width=device-width, initial-scale=1.0" charset="UTF-8" />
-        <link rel="stylesheet" href="../Dakota-Donaldson-Portfolio/assets/css/style.css" />
+        <link rel="stylesheet" href="./assets/css/style.css" />
         <title>Dakota Donaldson's Portfolio</title>
     </head>
 
@@ -33,7 +33,7 @@
         <!-- Hero Starts -->
         <section class="hero">
             <content>
-                <img src="../Dakota-Donaldson-Portfolio/assets/images/IMG_1889 (4).jpg" alt="/" />
+                <img src="./assets/images/IMG_1889 (4).jpg" alt="/" />
             </content>
         </section>
         <!-- Content Starts -->
@@ -68,9 +68,10 @@
                                 <h4>CSS</h4>
                             </div>
                             </a>
-                            <a id="youtube-id" class="work-images" href="https://www.youtube.com/" target="_blank" alt="Youtube logo">
+                            <a id="youtube-id" class="work-images" href="https://fremen432.github.io/Eazy-Eatz/" target="_blank" alt="Youtube logo">
                             <div class="textbox"> 
-                                <h3>Youtube</h3>
+                                <h3>Eazy Eatz</h3>
+                                <h4>HTML/CSS/JAVASCRIPT</h4>
                             </div>
                             </a>
                         </div>
