added Purple Minutes Style to work images

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 <h4>CSS</h4>
                             </div>
                             </a>
-                            <a id="youtube-id" class="work-images" href="https://fremen432.github.io/Eazy-Eatz/" target="_blank" alt="Youtube logo">
+                            <a id="eazyeatz" class="work-images" href="https://fremen432.github.io/Eazy-Eatz/" target="_blank" alt="Youtube logo">
                             <div class="textbox"> 
                                 <h3>Eazy Eatz</h3>
                                 <h4>HTML/CSS/JAVASCRIPT</h4>
@@ -76,9 +76,12 @@
                             </a>
                         </div>
                         <div class="secondary-images">
-                            <a id="google-id" class="work-images" href="https://www.google.com/" target="_blank" alt="Google Logo">
+                            <a id="purpleminutes" class="work-images" href="https://purpleminutesstyle.herokuapp.com/" target="_blank" alt="Purple Minutes Style Logo">
                                 <div class="textbox">
-                                    <h3>Google</h3>
+                                    <h3>Purple Minutes Style</h3>
+                                    <h4>HTML/CSS/JS/NODE.JS/BOOTSTRAP</h4>
+                                    <h4>EXPRESS/HANDLEBARS/HEROKU</h4>
+                                    <H4>MYSQL/SEQUELIZE/INSOMNIA</H4>
                                 </div>
                             </a>
                             <a id="amazon-id" class="work-images" href="https://www.amazon.com/" target="_blank" alt="Amazon Logo">
@@ -90,19 +93,19 @@
                     </section>
             </article>
             <article id="Contact-Me">
-                <content>
+                <content class="contact">
                     <h2>Contact Me</h2>
                 </content>
-                <content>
-                    <ul>
+                <content class="contact-info">
+                    <ul class="contact-links">
                         <li>
-                            <a href="https://www.bing.com/images/search?view=detailV2&ccid=kjvbdu9l&id=51DA958F6CB62AD00EC1E599B347EFDD99C85C67&thid=OIP.kjvbdu9lbCtBvWwH_YkleQHaE8&mediaurl=https%3a%2f%2fget.pxhere.com%2fphoto%2flaptop-computer-smartphone-mobile-screen-people-technology-car-web-internet-touch-tablet-vehicle-phone-office-telephone-communication-gadget-blue-business-black-mobile-phone-modern-device-smart-phone-electronics-design-display-cellphone-digital-media-network-multimedia-wireless-smart-using-computer-technology-person-on-phone-mobile-phones-on-the-phone-business-phone-mobile-device-automobile-make-portable-communications-device-office-phone-861251.jpg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.923bdb76ef656c2b41bd6c07fd892579%3frik%3dZ1zImd3vR7OZ5Q%26pid%3dImgRaw%26r%3d0&exph=3072&expw=4608&q=mobile+phone&simid=608043390712769076&FORM=IRPRST&ck=EA43A7ABF6032D72D97BE8475C6B57BA&selectedIndex=4&ajaxhist=0&ajaxserp=0">903.724.3255</a>           
+                            <a href="https://www.bing.com/images/search?view=detailV2&ccid=kjvbdu9l&id=51DA958F6CB62AD00EC1E599B347EFDD99C85C67&thid=OIP.kjvbdu9lbCtBvWwH_YkleQHaE8&mediaurl=https%3a%2f%2fget.pxhere.com%2fphoto%2flaptop-computer-smartphone-mobile-screen-people-technology-car-web-internet-touch-tablet-vehicle-phone-office-telephone-communication-gadget-blue-business-black-mobile-phone-modern-device-smart-phone-electronics-design-display-cellphone-digital-media-network-multimedia-wireless-smart-using-computer-technology-person-on-phone-mobile-phones-on-the-phone-business-phone-mobile-device-automobile-make-portable-communications-device-office-phone-861251.jpg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.923bdb76ef656c2b41bd6c07fd892579%3frik%3dZ1zImd3vR7OZ5Q%26pid%3dImgRaw%26r%3d0&exph=3072&expw=4608&q=mobile+phone&simid=608043390712769076&FORM=IRPRST&ck=EA43A7ABF6032D72D97BE8475C6B57BA&selectedIndex=4&ajaxhist=0&ajaxserp=0" target="_blank">903.724.3255</a>           
                         </li>
                         <li>
-                            <a href="mailto:dakota.donaldson17@icloud.com">Email</a>
+                            <a href="mailto:dakota.donaldson17@icloud.com" target="_blank">Email</a>
                         </li>
                         <li>
-                            <a href="https://github.com/Dakota3214">GitHub</a>
+                            <a href="https://github.com/Dakota3214" target="_blank">GitHub</a>
                         </li>
                     </ul>
                 </content>
