added updated image for Crockett Printing

--- a/index.html
+++ b/index.html
@@ -84,9 +84,10 @@
                                     <H4>MYSQL/SEQUELIZE/INSOMNIA</H4>
                                 </div>
                             </a>
-                            <a id="amazon-id" class="work-images" href="https://www.amazon.com/" target="_blank" alt="Amazon Logo">
+                            <a id="amazon-id" class="work-images" href="https://crockett-printing.herokuapp.com/" target="_blank" alt="Amazon Logo">
                                 <div class="textbox">
-                                    <h3>Amazon</h3>
+                                    <h3>Crockett Printing</h3>
+                                    <h4>MONGODB/EXPRESS/REACT/NODE.JS</h4>
                                 </div>
                             </a>
                         </div>
